--- a/src/App.css
+++ b/src/App.css
@@ -1,132 +1,4 @@
-body {
-  /*background: repeating-linear-gradient(
-  45deg,
-  #FFF0F0,
-  #FFF0F0 11em,
-  #ffcdcd 11em,
-  #ffcdcd 20em*/
-  background: linear-gradient(to right, #ffe6e6, white);
-/*);*/
-  mix-blend-mode: lighten;
-  background-color: #ffe6e6;
-  padding: 75px;
-  margin: 0;
-}
-h1, h2, h3, p, ul, li, content {
-  font-family: monospace;
-  font-weight: 25;
-}
 
-.textShadow {
-  text-shadow: 2px 2px 8px grey;
-}
-
-.photoShadow{
-  box-shadow: 3px 8px 10px grey;
-
-}
-/* Navigation */
-
-.active {
-  background-color: #ff9999;
-  font-weight: bold;
-  border: 1px solid white;
-}
-
-ul.header li {
-
-  display: inline;
-  text-align: center;
-  grid-column: 1/3
-  
-}
-ul.header {
-  /*background-color: #ffcdcd;*/
-  background-color: white;
-  list-style: none;
-  border: 5px solid white;
-  margin: 0;
-  padding: 50px;
-  width: 150px;
-  height: 200px; 
-  /*position: fixed;*/
-  /*overflow: auto;*/
-  /*can make height reactive if you delete it*/
-}
-ul.header li a {
-  display: block;
-  color: black;
-  font-size: 1em;
-  line-height: 20px;
-  text-decoration: none;
-  padding: 8px 8px;
-
-
-  /*display: inline-block;*/
-}
-
-/*nav bar hover and transiton*/
-ul.header a:hover {
-   background-color: #ff6666;
-   transition: .8s background-color;
-}
-
-
-
-
-/* Content */
-.content {
-  background-color: white;
-  padding: 1em;
-  padding-right: 1em;
-  padding-left: 1em;
-  grid-column: 3/9;
-  text-align: left;
-  border: 5px solid white;
-}
-
-.center {
-  text-align: center;
-}
-
-.content h2 {
-  padding: 0;
-  margin: 0;
-}
-.content li {
-  margin-bottom: 10px;
-}
-
-.profile_pic {
-  background: rgba(76, 175, 80, 0.1);
-  height: 150px;
-  width: 150px;
-  border: 1px gray solid;
-  text-shadow: 2px 2px gray;
-  border-radius: 50%;
-}
-
-.tech_pic{
-  height: 50px;
-  width: 50px;
-  /*text-shadow: 2px 2px gray;*/
-}
-
-.techPhotos{
-  /*border:1px gray solid;*/
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr
-}
-
-.rails_pic{
-  height: 50px;
-  width: 106px;
-}
-
-.photoDiv {
-  float: right;
-  padding: 0em;
-}
 
 .App {
   display: grid;
@@ -135,19 +7,291 @@ ul.header a:hover {
   /*font-family: sans-serif;
   background: rgba(76, 175, 80, 0.1);*/
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+/*  grid-template-rows: .5fr .5fr;*/
 }
+
+body {
+  /*background: repeating-linear-gradient(
+  45deg,
+  #FFF0F0,
+  #FFF0F0 11em,
+  #ffcdcd 11em,
+  #ffcdcd 20em*/
+  /*background: white;*/
+  /*background: radial-gradient(white, #A89070);*/
+  /*background: linear-gradient(to left, #9477ff 3%, #9477ff 2%, #9477ff 1%, white);*/
+/*);*/
+  mix-blend-mode: lighten;
+  background-color: #fff2e0;
+  padding: 75px;
+  margin: 0;
+
+}
+h1, h2, h3, p, ul, li, content {
+  font-family: monospace;
+  font-weight: 25;
+  color: black;
+}
+
+#head-name {
+  font-size: 20px;
+  padding-left: 6em;
+  font-weight: bold;
+  color: black;
+}
+
+#head-name h4 {
+  font-size: 10px;
+}
+
+/*u{
+  color: #FF8033;
+}*/
+
+.textShadow {
+  text-shadow: 2px 2px 8px grey;
+}
+
+/*.photoShadow{
+  box-shadow: 3px 8px 10px grey;
+}*/
+/* Navigation */
+
+.active {
+  background-color: none;
+  /*font-weight: bold;*/
+  /*border: 1px solid white;*/
+}
+
+ul.header li {
+  display: inline;
+  text-align: center;
+  /*padding: 3px;*/
+}
+ul.header {
+  /*background-color: #ffcdcd;*/
+  text-align: center;
+  background-color: white;
+  list-style: none;
+  border: 3px #FF8033 solid;
+  margin: 1em;
+  padding: 2em;
+  width: 75px;
+  height:150px;
+  /*background: radial-gradient(#fff2e0, #FF8033); */
+  box-shadow: 25px 25px 50px 0 #FF8033, inset, -25px -25px 50px 0 #fff2e0 inset; 
+ /* background: linear-gradient(to right, white, white);*/
+ /*background: grey;*/
+  grid-column: 2/3;
+  grid-row: 1/2;
+
+  /*border-radius: 70%;*/
+  /*position: fixed;*/
+  /*overflow: auto;*/
+  /*can make height reactive if you delete it*/
+}
+ul.header li a {
+  display: block;
+  color: black;
+  font-size: 1em;
+  line-height: 100%;
+  text-decoration: none;
+  padding: 1em;
+
+
+  /*display: inline-block;*/
+}
+
+/*nav bar hover and transiton*/
+ul.header a:hover {
+   background-color: #FF8033;
+   color: white;
+   transition: .5s background-color;
+}
+
+
+/* Content */
+.content {
+  /*height:500px;*/
+  /*display: grid;*/
+  /*grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: .1fr .1fr .1fr;*/
+  /*background: radial-gradient( #fff2e0, #FF8033);*/
+  /*blue black 
+  orange #FF8033*/
+  background-color: white;
+  border: 3px #FF8033 solid;
+  padding: 2em;
+  /*padding-right: 6em;
+  padding-left: 6em;*/
+  grid-column: 4/9;
+  grid-row: 1/2;
+  text-align: center;
+  box-shadow: 25px 25px 50px 0 #FF8033, inset, -25px -25px 50px 0 #fff2e0 inset; 
+  /*width: 300px;
+  height: 300px;*/
+  /*border-radius: 20%;*/
+}
+
+.center {
+  text-align: center;
+}
+
+.content h2 {
+  padding: 1em;
+  margin: 0;
+}
+.content li {
+  margin-bottom: 10px;
+  /*grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;*/
+}
+
+.profile_pic {
+  background: rgba(76, 175, 80, 0.1);
+  height: 150px;
+  width: 150px;
+  /*border: 3px #FF8033 solid;*/
+  text-shadow: 2px 2px gray;
+  border-radius: 50%;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: .2fr .2fr .2fr .2fr .2fr;
+}
+
+input[type=text], select, textarea {
+    width: 200px; /* Full width */
+    padding: 12px; /* Some padding */  
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+input[type=submit] {
+    background: linear-gradient(#FF8033,pink);;
+    color: white;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background: linear-gradient(white,pink);
+}
+
+.About {
+  /*padding:2em;*/
+  display: grid;
+  /*width: 100%;*/
+  /*text-align: center;*/
+  /*font-family: sans-serif;
+  background: rgba(76, 175, 80, 0.1);*/
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  /*grid-template-rows: .2fr .2fr;*/
+}
+
+.aboutHeading {
+  grid-column: 1/5;
+}
+
+.html {
+  grid-column: 1/2;
+/*  grid-row: 2;*/
+}
+
+.css {
+  grid-column: 2/3;
+/*  grid-row: 2;*/
+}
+
+.js {
+  grid-column: 3/4;
+/*  grid-row: 2;*/
+}
+
+.ruby {
+  grid-column: 4/5;
+/*  grid-row: 2;*/
+}
+
+.namebox {
+  height: 25px;
+  width: 100px;
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+.emailbox {
+/*  height: 25px;
+  width: 100px;*/
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.textbox {
+  height: 100px;
+/*  width: 300px;*/
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.submit {
+/*  height: 25px;
+  width: 100px;*/
+  /*background-color: black 50%;*/
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+
+.tech_pic{
+  height: 50px;
+  width: 50px;
+  /*text-shadow: 2px 2px gray;*/
+}
+
+.logo_pic {
+  height: 100px;
+  width: 150px;
+}
+
+.techPhotos{
+  /*border:1px gray solid;*/
+  display: grid;
+  /*grid-template-columns: 1fr*/
+}
+
+.rails_pic{
+  height: 50px;
+  width: 106px;
+}
+
+
+
+.photoDiv {
+  float: right;
+  padding: 0em;
+}
+
 
 .smallText {
   font-size: 1.1em;
+  color: white;
 }
 
 .twoEm {
   animation-duration: 3s;
 }
 
-p {
+.slide {
   animation-duration: 1s;
   animation-name: slidein;
+  color: white;
 }
 
 @keyframes slidein {
@@ -161,51 +305,4 @@ p {
     width: 100%;
   }
 }
-
-/*.App-header {
-  background: rgba(76, 175, 80, 0.1);
-  height: 150px;
-  padding: 20px;
-  color: white;
-}*/
-/*
-.App-title {
-  font-size: 1.2em;
-}
-
-.App-sub-title {
-  font-size: 1em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-.footer {
-    background-color: #F1F1F1;
-    text-align: center;
-    padding: 10px;
-}*/
-
-
-
-/*.figCaption {
-  text-align: center;
-  font-size: .8em
-}*/
-/*
-.mainProfile {
-  height: 300px;
-  padding: 15px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  /*column-count: 2;
-  column-gap: 100px;
-  column-rule: 1px solid lightgrey;
-}*/
-
-/* grid-column: 1/2 column lines that it lives between */
-
-/*.wholeApp {
-  background: rgba(76, 175, 80, 0.1); /* Green background with 30% opacity */
 
