--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   font-size: 40px;
-  padding: 15px;
+  padding: 5%;
   color: #0D1F35;
 }
 
@@ -25,6 +25,13 @@
 .subName{
   font-size: 30px;
   padding: 10px;
+}
+
+.icons{
+  font-size: 75px;
+  padding: 10px;
+  color: black;
+  text-decoration-color: black;
 }
 
 .mainPage{
@@ -220,13 +227,14 @@ a:link {
                 rgba(0,0,0,0.55) url('https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/458275_10150920965255419_1637873956_o.jpg?oh=9abe72e01c8d01d4105288d4616ccc82&oe=5AB8751E') no-repeat center;
  /* background-color:#F9F9FA;*/
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
-  padding: 250px;
+  padding: 5%;
 }
 
 .homeText{
-  padding: 100px;
+  padding: 5%;
   color: white;
-  font-size: 60px;
+  font-size: 50px;
+  text-align: center;
 }
 
 .toolBar{
